[gd_scene load_steps=6 format=3 uid="uid://d2tgftykfff67"]

[ext_resource type="PackedScene" uid="uid://vqjk61bg3ged" path="res://assets/models/car/car_model.tscn" id="1_7ri6m"]
[ext_resource type="Script" uid="uid://d4m86pnh5mudt" path="res://src/entities/car/car_controller.gd" id="1_p8s8u"]
[ext_resource type="Script" uid="uid://de0mvwbhvfnmy" path="res://scenes/entities/car/camera_rig.gd" id="3_83ose"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_p8s8u"]
friction = 0.0
bounce = 0.26

[sub_resource type="SphereShape3D" id="SphereShape3D_83ose"]

[node name="CarController" type="Node"]
script = ExtResource("1_p8s8u")
body_tilt = 40.0

[node name="CarModel" parent="." instance=ExtResource("1_7ri6m")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Cube_001" parent="CarModel" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08879, 0)

[node name="Ball" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0914588, 0)
physics_material_override = SubResource("PhysicsMaterial_p8s8u")
lock_rotation = true
linear_damp = 2.0
angular_damp = 5.0

[node name="GroundRay" type="RayCast3D" parent="Ball"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.03246826, 0)
target_position = Vector3(0, -2.32, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball"]
transform = Transform3D(1, 0, 0, 0, -0.005951518, 0.9999823, 0, -0.9999823, -0.005951518, -0.16447127, 0.35938707, -0.02294086)
shape = SubResource("SphereShape3D_83ose")

[node name="CameraRig" type="SpringArm3D" parent="Ball"]
transform = Transform3D(1, 0, 0, 0, 0.95105654, 0.309017, 0, -0.309017, 0.95105654, 0, 0, 0)
spring_length = 7.0
script = ExtResource("3_83ose")
max_camera_tilt = 20.0

[node name="Camera3D" type="Camera3D" parent="Ball/CameraRig"]
current = true

[node name="Timers" type="Node" parent="."]

[node name="DriftTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="BoostTimer" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="Timers/DriftTimer" to="." method="_on_drift_timer_timeout"]
[connection signal="timeout" from="Timers/BoostTimer" to="." method="_on_boost_timer_timeout"]

[editable path="CarModel"]
